--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,8 @@ footer {
   margin: auto;
   text-align: center;
 }
-/* .Classes */
+
+/* Global */
 .iconLink {
   padding: 5px;
   border-radius: 5px;
@@ -76,16 +77,11 @@ footer {
   background-color: darkorange;
 }
 
-/* #IDS */
+
+/* Resume */
 #resumePDF {
   max-width: 50%;
   margin: auto;
-}
-#projectTable {
-  margin: auto;
-}
-#projectTable td {
-  padding: 15px;
 }
 #downloadPDF {
   text-decoration: none;
@@ -101,6 +97,36 @@ footer {
   margin: 10px;
 }
 
+/* Projects */
+#projectTable {
+  margin: auto;
+}
+#projectTable td {
+  padding: 15px;
+}
+
+/* About */
+.aboutLabel {
+  font-size: 25px;
+  margin: 0px;
+  padding-bottom: 2px;
+}
+.aboutContent {
+  padding-left: 25px;
+  padding-right: 25px;
+  text-align: left;
+}
+#aboutTable {
+  background-color: rgba(255, 255, 255, 0.035);
+  margin: auto;
+  padding: 10px;
+  width: 60%;
+}
+#aboutTable hr {
+  color: white;
+  margin-top: 0px;
+  width: 50%;
+}
 
 @media only screen and (max-width: 600px) {
   /* Mobile devices */
@@ -112,5 +138,8 @@ footer {
     margin-right: 5px;
     color: white;
     text-decoration: none;
+  }
+  #aboutTable {
+    width: 100%;
   }
 }
